# cuda-raytracer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CUDA-RayTracer.sln  LICENSE  README.md  main.cpp
CUDA-RayTracer/: CUDA-RayTracer.vcxproj  CUDA-RayTracer.vcxproj.filters  Light.cpp  Light.h  main.cpp  packages.config
CUDA-RayTracer/application/: Application.cpp  Application.h  ApplicationOptions.h  BackendInitializer.cpp  BackendInitializer.h  CompileSettings.h  main.cpp
CUDA-RayTracer/backends/: Backend.cpp  Backend.h  Bitmap.cpp  Bitmap.h  Image.cpp  Image.h
CUDA-RayTracer/backends/cuda_backend/: CudaBackend.cu  CudaBackend.h
CUDA-RayTracer/backends/post_processing/: Exposure.cpp  Exposure.h  PostBackend.h  SRGBEncode.cpp  SRGBEncode.h  SuperSampler.cpp  SuperSampler.h
CUDA-RayTracer/backends/random_cuda/: RandomCudaBackend.cu  RandomCudaBackend.h
CUDA-RayTracer/backends/ray_tracing/: Box.cpp  Box.h  Camera.cpp  Camera.h  KdTree.cpp  KdTree.h  Light.cpp  Light.h  Node.cpp  Node.h  Random.h  RayTracingOpenMP.cpp  RayTracingOpenMP.cu  RayTracingOpenMP.h  Resolution.cpp  Resolution.h  Stack.cpp  Stack.h
CUDA-RayTracer/backends/solid_color_cuda/: SolidColorCudaBackend.cpp  SolidColorCudaBackend.cu  SolidColorCudaBackend.h
CUDA-RayTracer/frontends/: Frontend.cpp  Frontend.h
CUDA-RayTracer/frontends/frontend_controller/: BackendController.cpp  BackendController.h  CountDownLatch.cpp  CountDownLatch.h  FrontendController.cpp  FrontendController.h  FrontendInstance.cpp  FrontendInstance.h
CUDA-RayTracer/frontends/gtk/: GTKFrontend.cpp  GTKFrontend.h  MainWindow.glade
CUDA-RayTracer/frontends/image/: ImageFrontend.cpp  ImageFrontend.h
CUDA-RayTracer/frontends/sdl/: SDLError.h  SDLFrontend.cpp  SDLFrontend.h
CUDA-RayTracer/scene/: CameraPosition.h  Color.cpp  Color.h  Intersection.cpp  Intersection.h  Light.cpp  Light.h  Material.cpp  Material.h  Models.h  Point.cpp  Point.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  Shape.cpp  Shape.h  Triangle.cpp  Triangle.h  Vector.cpp  Vector.h
CUDA-RayTracer/scene/scene_loaders/: IOException.cpp  IOException.h  MtlParser.cpp  ObjLoader.cpp  ObjLoader.h  ParseError.cpp  ParseError.h  SceneLoader.cpp  SceneLoader.h  UnknownFormatException.cpp  UnknownFormatException.h
CUDA-RayTracer/scene/scene_loaders/assimp_wrapper/: AssimpWrapper.cpp  AssimpWrapper.h
CUDA-RayTracer/scene/scene_loaders/obj_loader/: MtlParser.cpp  MtlParser.h  ObjLoader.cpp  ObjLoader.h
backends/: Backend.cpp  Backend.h  Image.cpp  Image.h
backends/solid_color_cuda/: SolidColorCudaBackend.cpp  SolidColorCudaBackend.cu  SolidColorCudaBackend.h
enc_temp_folder/e06c728916fbc7a96dbe97ae2f386a5c/: RayTracingOpenMP.cpp
frontends/: Frontend.cpp  Frontend.h
frontends/frontend_controller/: CountDownLatch.h  FrontendController.cpp  FrontendController.h
frontends/image/: ImageError.cpp  ImageError.h  ImageFrontend.cpp  ImageFrontend.h
frontends/sdl/: SDLError.cpp  SDLError.h  SDLFrontend.cpp  SDLFrontend.h
